--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -1,32 +1,24 @@
 {#
 /**
  * @file
- * Implements an advanced "Content sequence" block type.
- * @author Tim Tripp
+ * Implements the "Content Sequence" block type.
+ * @author Jacob Korf, Tim Tripp
  */
 #}
-{{ attach_library('boulderD9_base/timelinejs') }}
-{% set entity = content['#block_content'] %}{% set classes = [
+{% set entity = content['#block_content'] %}
+{% if entity.field_content_sequence_display.0.value == 'advanced' %}{% include '@boulderD9_base/block/block--content-sequence-advanced.html.twig' %}{% else %}
+{% set classes = [
 	'container',
 	'block',
 	'block-' ~ configuration.provider|clean_class,
 	'block-' ~ plugin_id|clean_class,
 	bundle ? 'block--type-' ~ bundle|clean_class,
 	view_mode ? 'block--view-mode-' ~ view_mode|clean_class
-] %}{% set timelineData = {} %}{% set timelineOptions = {
-	'hash_bookmark': true,
-	'scale_factor': entity.field_scale.0.value
-} %}{% set embedId = 'timelinejs-embed-' ~ entity.uuid.0.value %}
-{% block content %}<div{{ attributes.addClass(classes) }}>
+] %}
+<div{{ attributes.addClass(classes) }}>
 	{{ title_prefix }}
-	{% if label %}
-		<h2{{ title_attributes }}>{{ label }}</h2>
-	{% endif %}
+	{% if label %}<h2{{ title_attributes }}>{{ label }}</h2>{% endif %}
 	{{ title_suffix }}
-	<div id="{{ embedId }}" style="width: 100%; height: 600px" aria-hidden="true" role="presentation" tabindex="-1"></div>
-	<script type="text/javascript">
-		document.addEventListener('DOMContentLoaded', function() {
-			new TL.Timeline('{{ embedId }}', {{ timelineData | json_encode | raw }}, {{ timelineOptions | json_encode | raw }})
-		});
-	</script>
-</div>{% endblock %}
+	{# TODO: Work for the horizontal and vertical display modes goes here #}
+</div>
+{% endif %}
