--- a/templates/block/block--content-sequence-advanced.html.twig
+++ b/templates/block/block--content-sequence-advanced.html.twig
@@ -20,7 +20,7 @@
 {% for item in entity.field_content_sequence_items %}
 {% set startDate = item.entity.field_sequence_item_start_date.0.value ?? 'now' %}{% set endDate = item.entity.field_sequence_item_end_date.0.value ?? 'now' %}
 {% if item.entity.field_sequence_item_media.0 %}{% set imageEntity = item.entity.field_sequence_item_media.0.entity.field_media_image.entity %}{% set itemMedia = {
-	'url': imageEntity.fileuri|image_style('focal_image_wide')
+	'url': file_url(imageEntity.fileuri)
 } %}{% else %}{% set itemMedia = null %}{% endif %}
 {% set itemData = {
 	'text': {
@@ -30,12 +30,14 @@
 	'start_date': {
 		'month': startDate|date('m'),
 		'day': startDate|date('d'),
-		'year': startDate|date('Y')
+		'year': startDate|date('Y'),
+		'display_date': item.entity.field_sequence_item_d_start_date.0.value
 	},
 	'end_date': {
 		'month': endDate|date('m'),
 		'day': endDate|date('d'),
-		'year': endDate|date('Y')
+		'year': endDate|date('Y'),
+		'display_date': item.entity.field_sequence_item_d_end_date.0.value
 	},
 	'group': item.entity.field_sequence_item_group.0.value,
 	'media': itemMedia
@@ -47,8 +49,15 @@
 	{{ title_suffix }}
 	<div id="{{ embedId }}" style="width: 100%; height: 600px" aria-hidden="true" role="presentation" tabindex="-1"></div>
 	<script type="text/javascript">
-		document.addEventListener('DOMContentLoaded', function() {
-			new TL.Timeline('{{ embedId }}', {{ timelineData | json_encode | raw }}, {{ timelineOptions | json_encode | raw }});
-		});
+		(function(readyState) {
+			function loadTimeline() {
+				new TL.Timeline('{{ embedId }}', {{ timelineData | json_encode | raw }}, {{ timelineOptions | json_encode | raw }});
+			}
+			if (readyState === 'loading') {
+				document.addEventListener('DOMContentLoaded', function() {
+					loadTimeline();
+				});
+			} else loadTimeline();
+		})(document.readyState);
 	</script>
 </div>{% endblock %}
