--- a/templates/block/block--content-sequence-advanced.html.twig
+++ b/templates/block/block--content-sequence-advanced.html.twig
@@ -20,8 +20,9 @@
 	'scale_factor': entity.field_content_sequence_scale.0.value,
 	'font': 'Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif'
 } %}{% set embedId = 'timeline-embed-' ~ entity.uuid.0.value %}
-{% if entity.field_sequence_title.0.value or entity.body.0.value %}{% if entity.field_content_sequence_media %}{% set imageEntity = entity.field_content_sequence_media.0.entity.field_media_image.entity %}{% set titleMedia = {
-	'url': file_url(imageEntity.fileuri)
+{% if entity.field_sequence_title.0.value or entity.body.0.value %}{% set imageField = entity.field_content_sequence_media.0.entity.field_media_image %}{% if imageField %}{% set titleMedia = {
+	'url': file_url(imageField.entity.fileuri),
+	'alt': imageField.0.alt
 } %}{% else %}{% set titleMedia = null %}{% endif %}
 {% set titleSlide = {
 	'text': {
@@ -31,10 +32,12 @@
 	media: titleMedia
 } %}{% endif %}
 {% for item in entity.field_content_sequence_items %}
-{% set startDate = item.entity.field_sequence_item_start_date.0.value ?? 'now' %}{% set endDate = item.entity.field_sequence_item_end_date.0.value ?? 'now' %}
-{% if item.entity.field_sequence_item_media.0 %}{% set imageEntity = item.entity.field_sequence_item_media.0.entity.field_media_image.entity %}{% set itemMedia = {
-	'url': file_url(imageEntity.fileuri)
-} %}{% else %}{% set itemMedia = null %}{% endif %}{% set itemTitleText = item.entity.field_sequence_item_title.0.value %}{% if item.entity.field_sequence_item_url.0.uri %}{% set itemTitle = '<a href="' ~ item.entity.field_sequence_item_url.0.uri ~ '">' ~ itemTitleText ~ '</a>' %}{% else %}{% set itemTitle = itemTitleText %}{% endif %}
+{% set startDate = item.entity.field_sequence_item_start_date.0.value ?? 'now' %}{% set endDate = item.entity.field_sequence_item_end_date.0.value ?? 'now' %}{% set itemLink = item.entity.field_sequence_item_url.0.uri %}
+{% set imageField = item.entity.field_sequence_item_media.0.entity.field_media_image %}{% if imageField %}{% set itemMedia = {
+	'url': file_url(imageField.entity.fileuri),
+	'link': itemLink,
+	'alt': imageField.0.alt
+} %}{% else %}{% set itemMedia = null %}{% endif %}{% set itemTitleText = item.entity.field_sequence_item_title.0.value %}{% if itemLink %}{% set itemTitle = '<a href="' ~ item.entity.field_sequence_item_url.0.uri ~ '">' ~ itemTitleText ~ '</a>' %}{% else %}{% set itemTitle = itemTitleText %}{% endif %}
 {% set itemData = {
 	'text': {
 		'headline': itemTitle,
