--- a/css/block/content-sequence-advanced.css
+++ b/css/block/content-sequence-advanced.css
@@ -3,6 +3,7 @@
 	font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif; /* Forces CU Boulder site's default font */
 	width: 100%;
 	height: 720px;
+	max-height: 100vh;
 	margin-bottom: 20px;
 }
 
