--- a/css/ucb-content-sequence.css
+++ b/css/ucb-content-sequence.css
@@ -1,68 +1,76 @@
 .vertical-timeline-card {
-
-    max-width: 50%;
-    list-style: none;
-    list-style-image: none;
-    margin: 0;
-    padding:0;
+  max-width: 50%;
+  list-style: none;
+  list-style-image: none;
+  margin: 0;
+  padding: 0;
 }
 
 .vertical-timeline-card:nth-child(even) {
-    float: right;
+  float: right;
+  clear: left;
 }
+
+.vertical-timeline-card:nth-child(odd) {
+    clear: right;
+  }
 .vertical-timeline-card-wrapper {
-    margin: 10px 20px 40px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  margin: 10px 20px 40px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .vertical-timeline-card-header {
-    padding: 00px 20px 0 20px;
+  padding: 00px 20px 0 20px;
 }
 
 .vertical-timeline-card-body {
-    padding: 0 20px 20px 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .vertical-timeline-card-title {
-    font-size: 150%;
+  font-size: 150%;
 }
 
 .vertical-timeline-card-date {
-    font-size: 85%;
-    margin-bottom: 10px;
+  font-size: 85%;
+  margin-bottom: 10px;
 }
-.vertical-timeline-card-wrapper::before{
-display: block;
-width: 20px;
-height: 20px;
-border-radius: 100%;
-background: #cfb87c;
-position: absolute;
-left: 50%;
-z-index: 1;
-content: " ";
--webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
--moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-border: 3px solid #fff;
-}
-
-.vertical-timeline-container::before{
-    content: " ";
-    position: absolute;
-    top: 100px;
-    bottom: 20px;
-    left: calc( 50% + 9px);
-    width: 2px;
-    background-color: #dfdfdf;
+.vertical-timeline-card-wrapper::before {
+  display: block;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background: #cfb87c;
+  position: absolute;
+  left: 50%;
+  z-index: 1;
+  content: " ";
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  border: 3px solid #fff;
 }
 
-.vertical-timeline-container::after{
-content: " ";
-position: absolute;
-width: 10px;
-height: 2px;
-background-color: #dfdfdf;
-bottom: 20px;
-left: calc( 50% + 5px);
+.vertical-timeline-container::before {
+  content: " ";
+  position: absolute;
+  top: 100px;
+  bottom: 20px;
+  left: calc(50% + 9px);
+  width: 2px;
+  background-color: #dfdfdf;
+}
+
+.vertical-timeline-container::after {
+  content: " ";
+  position: absolute;
+  width: 10px;
+  height: 2px;
+  background-color: #dfdfdf;
+  bottom: 20px;
+  left: calc(50% + 5px);
+}
+
+.vertical-timeline-card-media img {
+  width: 100%;
 }
