CuBoulder/tiamat-theme#265 adds support for HTML in vertical content sequence slide descriptions

--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -51,7 +51,7 @@
 									</h4>
 								</div>
 								<div class="vertical-timeline-card-body">
-									{{item.entity.field_sequence_item_descr.value|render|striptags|trim}}
+									{{item.entity.field_sequence_item_descr|view|render}}
 								</div>
 							</div>
 						</li>
