--- a/css/block/ucb-content-sequence.css
+++ b/css/block/ucb-content-sequence.css
@@ -1,3 +1,4 @@
+.horizontal-timeline-card,
 .vertical-timeline-card {
   max-width: 50%;
   list-style: none;
@@ -12,29 +13,36 @@
 }
 
 .vertical-timeline-card:nth-child(odd) {
-    clear: right;
-  }
+  clear: right;
+}
+
+.horizontal-timeline-card-wrapper,
 .vertical-timeline-card-wrapper {
   margin: 10px 20px 40px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
+.horizontal-timeline-card-header,
 .vertical-timeline-card-header {
   padding: 00px 20px 0 20px;
 }
 
+.horizontal-timeline-card-body,
 .vertical-timeline-card-body {
   padding: 0 20px 20px 20px;
 }
 
+.horizontal-timeline-card-title,
 .vertical-timeline-card-title {
   font-size: 150%;
 }
 
+.horizontal-timeline-card-date,
 .vertical-timeline-card-date {
   font-size: 85%;
   margin-bottom: 10px;
 }
+
 .vertical-timeline-card-wrapper::before {
   display: block;
   width: 20px;
@@ -71,6 +79,141 @@
   left: calc(50% + 5px);
 }
 
+.horizontal-timeline-card-media img,
 .vertical-timeline-card-media img {
   width: 100%;
+}
+
+.horizontal-timeline-container {
+  max-width: 50%;
+  position: relative;
+  margin: auto;
+}
+
+.cardsHidden div {
+  display: none;
+}
+
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dotPrevious::before,
+.dotActive::before,
+.dotNext::before {
+  position: absolute;
+  content: " ";
+  display: block;
+  height: 2px;
+  top: 50%;
+  left: -75px;
+  width: 75px;
+}
+
+.dotPrevious::after,
+.dotActive::after,
+.dotNext::after {
+  position: absolute;
+  content: " ";
+  display: block;
+  height: 2px;
+  top: 50%;
+  left: 10px;
+  width: 75px;
+}
+
+.dotPrevious:before,
+.dotPrevious::after,
+.dotActive::before {
+  background-color: brown;
+}
+
+.dotNext::before,
+.dotNext::after,
+.dotActive::after {
+  background-color: grey;
+}
+
+.dotActive .dot {
+  background-color: black;
+}
+.dotPrevious .dot {
+  background-color: brown;
+}
+.dotNext .dot {
+  background-color: white;
+  border: 1px grey solid;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.horizontal-timeline-slider {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.horizontal-timeline-slider-header {
+  border-left: 1px black solid;
+  border-right: 1px black solid;
+  width: 480px;
+  box-shadow: -15px 0 15px -15px #333 inset, 15px 0 15px -15px #333 inset;
+  padding: 15px 0px 10px 0px;
+  overflow: hidden;
+}
+
+.horizontal-timeline-slider-header-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.horizontal-timeline-slider-header-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 160px;
+  min-width: 160px;
+}
+
+.horizontal-timeline-card-wrapper:hover {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+}
+
+.horizontal-timeline-buttons-slide {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.horizontal-timeline-buttons-slide-previous,
+.horizontal-timeline-buttons-slide-next {
+  font-size: 32px;
+}
+
+.prev,
+.next {
+  padding: 0 16px 16px 16px;
+}
+
+.dot-wrapper {
+  position: relative;
 }
