--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -27,7 +27,115 @@
 				<h2{{title_attributes}}>{{ label }}</h2>
 			{% endif %}
 			{{ title_suffix }}
-			{% if entity.field_content_sequence_display.0.value == 'horizontal' %}{% endif %}
+			{% if entity.field_content_sequence_display.0.value == 'horizontal' %}
+
+				<!-- The dots/circles -->
+				<div class="horizontal-timeline-slider">
+					<div>
+						<a class="prev horizontal-timeline-buttons-scroll-previous" onclick="scrollPrevious()">
+							<i class="fa fa-chevron-circle-left"></i>
+						</a>
+					</div>
+					<div class="horizontal-timeline-slider-header">
+						<div class="horizontal-timeline-slider-header-wrapper">
+							{% for key, item in content['#block_content'].field_content_sequence_items if key|first != '#' %}
+								{% set stepNo = key + 1 %}
+								<div class="horizontal-timeline-slider-header-col">
+									<div class="dot-wrapper">
+										<span class="dot" onclick="currentSlide({{stepNo}})"></span>
+									</div>
+									{% if item.entity.field_sequence_item_d_start_date.value|render %}
+										{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+									{% else %}
+										{% set stepNo = key + 1 %}
+										STEP
+										{{stepNo}}
+									{% endif %}
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+					<div>
+						<a class="next horizontal-timeline-buttons-scroll-next" onclick="scrollNext()">
+							<i class="fa fa-chevron-circle-right"></i>
+						</a>
+					</div>
+				</div>
+				<div class="horizontal-timeline-container">
+
+					{% for key, item in content['#block_content'].field_content_sequence_items if key|first != '#' %}
+						<!-- Full-width images with number and caption text -->
+						{% if key == "0" %}
+							<div class="horizontal-cards cardsActive fade">
+								<div class="horizontal-timeline-card-wrapper">
+									<div class="horizontal-timeline-card-media">{% set imageField = item.entity.field_sequence_item_media.entity.field_media_image %}{% set videoField = item.entity.field_sequence_item_media.entity.field_media_oembed_video %}
+										{% if imageField %}
+											{{ imageField|view }}
+										{% elseif videoField %}
+											{{ videoField|view }}
+										{% endif %}
+									</div>
+									<div class="horizontal-timeline-card-header">
+
+										<h2></h2>
+										<h3 class="horizontal-timeline-card-date">
+											{% if item.entity.field_sequence_item_d_start_date.value|render %}
+												{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+											{% else %}
+												{% set stepNo = key + 1 %}
+												STEP
+												{{stepNo}}
+											{% endif %}
+										</h3>
+										<h4 class="horizontal-timeline-card-title">
+											<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+										</h4>
+									</div>
+									<div class="horizontal-timeline-card-body">
+										{{item.entity.field_sequence_item_descr|view|render}}
+									</div>
+								</div>
+							</div>
+						{% else %}
+							<div class="horizontal-cards cardHidden fade">
+								<div class="horizontal-timeline-card-wrapper">
+									<div class="horizontal-timeline-card-media">
+										{{item.entity.field_sequence_item_media.entity.field_media_image|view}}
+									</div>
+									<div class="horizontal-timeline-card-header">
+
+										<h3 class="horizontal-timeline-card-date">
+											{% if item.entity.field_sequence_item_d_start_date.value|render %}
+												{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+											{% else %}
+												{% set stepNo = key + 1 %}
+												STEP
+												{{stepNo}}
+											{% endif %}
+										</h3>
+										<h4 class="horizontal-timeline-card-title">
+											<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+										</h4>
+									</div>
+									<div class="horizontal-timeline-card-body">
+										{{item.entity.field_sequence_item_descr|view|render}}
+									</div>
+								</div>
+							</div>
+						{% endif %}
+
+					{% endfor %}
+					<!-- Next and previous buttons -->
+					<div class="horizontal-timeline-buttons-slide">
+						<a class="prev horizontal-timeline-buttons-slide-previous" onclick="plusSlides(-1)">
+							<i class="fa fa-chevron-left"></i>
+						</a>
+						<a class="next horizontal-timeline-buttons-slide-next" onclick="plusSlides(1)">
+							<i class="fa fa-chevron-right"></i>
+						</a>
+					</div>
+				</div>
+			{% endif %}
 
 			{% if entity.field_content_sequence_display.0.value == 'vertical' %}
 				<ol class="vertical-timeline-container">
@@ -36,7 +144,11 @@
 							<div class="vertical-timeline-card-wrapper">
 								<div class="vertical-timeline-card-media">
 									{% set imageField = item.entity.field_sequence_item_media.entity.field_media_image %}{% set videoField = item.entity.field_sequence_item_media.entity.field_media_oembed_video %}
-									{% if imageField %}{{ imageField|view }}{% elseif videoField %}{{ videoField|view }}{% endif %}
+									{% if imageField %}
+										{{ imageField|view }}
+									{% elseif videoField %}
+										{{ videoField|view }}
+									{% endif %}
 								</div>
 								<div class="vertical-timeline-card-header">
 
@@ -44,11 +156,13 @@
 										{% if item.entity.field_sequence_item_d_start_date.value|render %}
 											{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 										{% else %}
-										{% set stepNo = key + 1 %}
-											STEP {{stepNo}}
+											{% set stepNo = key + 1 %}
+											STEP
+											{{stepNo}}
 										{% endif %}
 									</h3>
-									<h4 class="vertical-timeline-card-title">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}
+									<h4 class="vertical-timeline-card-title">
+										<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
 									</h4>
 								</div>
 								<div class="vertical-timeline-card-body">
